--- a/fleek-stars/src/app/components/html-code-builder/html-code-builder.component.html
+++ b/fleek-stars/src/app/components/html-code-builder/html-code-builder.component.html
@@ -8,6 +8,7 @@
             <div class="row mt-3">
                 <hr>
                 <h2 class="ms-3">Tags</h2>
+                <p>kei git hub test</p>
                 <hr>    
             </div>
 
